[package]
name = "thermite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35.2+1.2.203"
ash-window = "0.10.0"
env_logger = "0.9.0"
log = "0.4.17"
winit = "0.26.1"

[features]
ash-molten = []

# MoltenVK Support for MacOS
[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = { version="0.13.0+1.1.10", features=["pre-built"]}